# squad3-script-lang

./: .gitignore  configure.ac
lib/: Makefile.am
src/: Makefile.am  parser.c
tests/: parser.c
